{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "74043668-fb81-4db3-889d-44ea988b9ccc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d91bf022-a875-4c0a-9a21-5ce7816ecb93",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d4b4da6d-00c2-47e8-a5a3-fef33e1b9af1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "261c5c2a-753a-4be3-9090-91789021e7e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "92b2f016-0c70-4d44-bdbb-d5ef6c7f43f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "be798615-ca1b-4f76-958f-13d8b97cfacf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GroundBash",
                    "type": "Button",
                    "id": "3d51d558-e161-4603-abc1-b9a8fef9650a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "31398017-f9ac-42c2-91a5-a8963174757c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "670c16d0-fe31-4831-a014-4c3a8ae9f630",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8de0d43e-0f01-4d9a-b312-f35e3dbaabab",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "128dbf85-e6b0-46f1-a9b6-89ebcdbd31d8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "470e0e9e-c8bb-4fa2-a40f-74de547adf12",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cdca2a13-ddba-460a-a643-08f320071bf8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fe77eb9f-cd20-4e29-a523-bd4954e9ff44",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "482ea7c6-853c-4d36-b11c-6a9cb6e88ccd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb8dc669-f628-4c12-aa90-d8b3cf0251c1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30e230f1-dabf-4d5c-88a4-f788dbf1fd99",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed429f89-b285-40bc-8450-ed3f6d14fee6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b53f98c-6a9d-43c3-92ef-f7b31c477f8d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c8215f2-d565-44c3-8b46-ec2b010ebcfb",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68a89592-8565-4b1a-8b78-d3b72ab34af7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b4e1d8d-8337-45bb-9be1-080ba1893833",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundBash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fa0ff7f-5a91-4baa-82f1-23d3551d2c7e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundBash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d5d7198-a90a-4625-90f1-6604cecdfb0f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c16d8e0-8c7e-4ec2-91da-8740182954d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4ac79e2-100f-4894-9bcd-e2fc63e280fc",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "4a1b6a6a-00f1-4e75-a59c-bdfd747f55b2",
            "actions": [
                {
                    "name": "KillPlayer",
                    "type": "Button",
                    "id": "17288cfd-dc00-4a06-9b0b-577cf4eb7f30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillEnemies",
                    "type": "Button",
                    "id": "3b9aea5c-a3ef-459e-aeb2-848688e707dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForceFlagDrop",
                    "type": "Button",
                    "id": "653376a0-04c6-4b93-a178-32e43389b740",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TeleportPlayer",
                    "type": "Button",
                    "id": "8e025ef3-1ac7-4e96-b72d-220fc41dc9f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RespawnEnemies",
                    "type": "Button",
                    "id": "e5113370-a537-4b10-bbd9-0d1abb5ab145",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForceGameOver",
                    "type": "Button",
                    "id": "5d620e38-bbd6-4be5-b60b-d231ae7e8a7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForceFlagCapture",
                    "type": "Button",
                    "id": "dd3aaa49-6255-4f5a-bc6e-a93b6d2cc284",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnBasicChaser",
                    "type": "Button",
                    "id": "f02b14d1-150c-4de5-a097-f5188d7c2fb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnDefender",
                    "type": "Button",
                    "id": "1314dd93-8029-4f00-95c9-faba2ef9b290",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnFlagChaser",
                    "type": "Button",
                    "id": "91989a49-d0e6-42e4-b17e-e8aa7d5353a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetAllEnemies",
                    "type": "Button",
                    "id": "8c64973b-37e5-47c4-8927-23846bb1eb6e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetFlag",
                    "type": "Button",
                    "id": "8001d9f8-cfdf-4047-ad70-3641df2a4d9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TeleportPlayertoCenter",
                    "type": "Button",
                    "id": "98999a9d-5cf6-4f92-bdad-ee50bd47b116",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAI",
                    "type": "Button",
                    "id": "bbedf84d-b95d-4dd0-9b67-d270c8227460",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24e1211c-81d0-479e-8e07-65aad5618598",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50bdedd4-09e0-4673-aad1-bfb652bf18af",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillEnemies",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be1e7458-ded3-4ed1-9639-8651378a8ec2",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceFlagDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0172b183-e4ce-42a4-bdc0-ae337ec12b89",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TeleportPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05c72dba-3c3c-48cf-bfb6-e3f809fcf061",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RespawnEnemies",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dffc9f6-59eb-4767-a171-32a693a6f61b",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceGameOver",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99eaf999-0c70-4c78-b993-4d132ca8b986",
                    "path": "<Keyboard>/f7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceFlagCapture",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d3f7f79-018d-4f53-9723-4e0a74acd800",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnBasicChaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1d690bb-f976-45b2-b98c-9bb09f9cedef",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnDefender",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76f9082f-5e5f-45ea-a089-d022606902aa",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnFlagChaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6458e328-fee9-4285-a344-1c21f7177c1d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetAllEnemies",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05e491e1-b37c-44ff-935e-1a192c7497c8",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetFlag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "538cfb39-3de2-43c0-9239-1a53f716eb95",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TeleportPlayertoCenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5281ab00-ae4c-4de2-8adf-fdd5444e7b02",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}